--- a/.air.conf
+++ b/.air.conf
@@ -1,27 +1,35 @@
 # [Air](https://github.com/cosmtrek/air) TOML 格式的配置文件
 
 # 工作目录
-# 使用 . 或绝对路径，请注意 `tmp_dir` 目录必须在 `root` 目录下
+# 使用 . （相对路径）或绝对路径，请注意 `tmp_dir` 目录必须在 `root` 目录下
+# 会在当前路径下创建一个tmp文件夹
 root = "."
 tmp_dir = "tmp"
 
 [build]
 # 只需要写你平常编译使用的shell命令。你也可以使用 `make`
 # Windows平台示例: cmd = "go build -o tmp\main.exe ."
-cmd = "go build -o ./tmp/main ."
+cmd = "swag init && go build -o tmp\main.exe"
+
 # 由`cmd`命令得到的二进制文件名
 # Windows平台示例：bin = "tmp\main.exe"
 # bin = "tmp/main"
 bin = "tmp\main.exe"
+
 # 自定义执行程序的命令，可以添加额外的编译标识例如添加 GIN_MODE=release
 # Windows平台示例：full_bin = "tmp\main.exe"
-full_bin = "./tmp/main"
+# full_bin = "tmp\main.exe conf\config.yaml"
+full_bin = "tmp\main.exe conf\config.yaml"
+
 # 监听以下文件扩展名的文件.
-include_ext = ["go", "tpl", "tmpl", "html"]
+include_ext = ["go", "tpl", "tmpl", "html", "yaml"]
+
 # 忽略这些文件扩展名或目录
 exclude_dir = ["assets", "tmp", "vendor", "frontend/node_modules"]
+
 # 监听以下指定目录的文件
 include_dir = []
+
 # 排除以下文件
 exclude_file = []
 # 如果文件更改过于频繁，则没有必要在每次更改时都触发构建。可以设置触发构建的延迟时间
