--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -11,7 +11,7 @@ log:
   max_age: 30
   max_backups: 7
 mysql:
-  host: "127.0.0.1"
+  host: 127.0.0.1
   port: 3306
   user: "root"
   password: "lu741208"
@@ -19,7 +19,7 @@ mysql:
   max_open_conns: 200
   max_idle_conns: 50
 redis:
-  host: "127.0.0.1"
+  host: 127.0.0.1
   port: 6379
   password: ""
   db: 0
